--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  command = "pnpm install --no-optional && pnpm run build"
-  publish = "build/client"
+  command = "pnpm install && pnpm run build"
+  publish = "build"
 
-[functions]
-  node_bundler = "esbuild"
+[context.production.environment]
+  # Do NOT put your real key here. Add it in Netlify UI as described below.
+  GEMINI_API_KEY = ""
